--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,9 +14,25 @@
         android:theme="@style/Theme.CREDENCE"
         tools:targetApi="31">
         <activity
+            android:name=".MainGoal1"
+            android:label="GOAL Activity"
+            android:parentActivityName=".MainActivity3_1" />
+        <activity
+            android:name=".MainActivity3"
+            android:label="Third Activity"
+            android:parentActivityName=".MainActivity2" />
+        <activity
+            android:name=".MainActivity3_1"
+            android:label="Third_1 Activity"
+            android:parentActivityName=".MainActivity2_1" />
+        <activity
             android:name=".MainActivity2_1"
+
             android:label="Second_1 Activity"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".MainActivity"
+
+            />
+
         <activity
             android:name=".MainActivity2"
             android:label="Second Activity"
