--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:theme="@style/Theme.CREDENCE"
         tools:targetApi="31">
         <activity
+            android:name=".MainDisplay"
+            android:label="DISPLAY Activity"
+            android:parentActivityName=".MainGoal1" />
+        <activity
             android:name=".MainGoal1"
             android:label="GOAL Activity"
             android:parentActivityName=".MainActivity3_1" />
